--- a/.github/workflows/nim-tests.yml
+++ b/.github/workflows/nim-tests.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Setup Nim environment
-      uses: jiro4989/setup-nim-action@latest
+      uses: jiro4989/setup-nim-action@v2.2.2
       with:
         nim-version: ${{ matrix.nim-version }}
         
