--- a/.github/workflows/nim-tests.yml
+++ b/.github/workflows/nim-tests.yml
@@ -8,13 +8,16 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        nim-version: ['2.0.14', '2.2.0']  # Test against multiple Nim versions
-
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        nim-version: ['2.0.14', '2.2.0']
+      fail-fast: false  # Continue with other OS/version combinations even if one fails
+    
+    runs-on: ${{ matrix.os }}
+    
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Setup Nim environment
       uses: jiro4989/setup-nim-action@v2.2.2
@@ -23,19 +26,23 @@ jobs:
         
     - name: Install dependencies
       run: |
+        nimble refresh
         nimble install -y
         nimble refresh
         
     - name: Run tests
-      run: |
-        nimble test -y
+      run: nimble test
         
-    #- name: Build project
-    #  run: |
-    #    nimble build -y
-        
+    # Caching strategy adapted for each OS
     - name: Cache nimble packages
       uses: actions/cache@v4
       with:
-        path: ~/.nimble
-        key: ${{ runner.os }}-nimble-v1
+        path: |
+          ~/.nimble
+          ${{ github.workspace }}/nimcache
+          ${{ env.APPDATA }}/nimble  # Windows-specific
+          ~/Library/Nimble           # macOS-specific
+        key: ${{ runner.os }}-nim-${{ matrix.nim-version }}-v1
+        restore-keys: |
+          ${{ runner.os }}-nim-${{ matrix.nim-version }}-
+          ${{ runner.os }}-nim-
