--- a/.github/workflows/nim-tests.yml
+++ b/.github/workflows/nim-tests.yml
@@ -11,14 +11,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        nim-version: ['2.0.14', '2.2.0']
+        nim-version: ['1.6.18', '2.0.14', '2.2.0']
         arch: [x64, arm64]
         exclude:
           # GitHub doesn't provide Windows ARM runners yet
           - os: windows-latest
             arch: arm64
       fail-fast: false
-    
+
     runs-on: ${{ matrix.arch == 'arm64' && matrix.os == 'macos-latest' && 'macos-14' || matrix.os }}
     
     steps:
