--- a/tests/dotnet/Client/Client.csproj
+++ b/tests/dotnet/Client/Client.csproj
@@ -42,7 +42,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Program.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+    <!--<Compile Include="Properties\AssemblyInfo.cs"/>-->
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Lib\Lib.csproj">
