--- a/.github/workflows/net-tests.yml
+++ b/.github/workflows/net-tests.yml
@@ -42,6 +42,6 @@ jobs:
       run: |
         Start-Process -NoNewWindow -FilePath "tests/nim/server.exe"
         Start-Sleep -Seconds 15
-        & "tests/dotnet/Client/bin/Release/Client.exe" "tcp://localhost:8081/EchoService"
+        & "tests/dotnet/Client/bin/Release/Client.exe" "tcp://127.0.0.1:8081/EchoService"
         if ($LASTEXITCODE -ne 0) { exit 1 }
         Stop-Process -Name "server" -Force
